--- a/css/lobby.css
+++ b/css/lobby.css
@@ -259,9 +259,9 @@ button {
 
 .player-count {
     position: fixed;
-    bottom: 1vw;
+    bottom: 0.6vw;
     width: 20%;
-    height: 10%;
+    height: 12%;
     margin-left: 40%;
     display: flex;
     flex-direction: column;
@@ -271,22 +271,34 @@ button {
     padding: 0.8vw;
     padding-top: 0.5vw;
     padding-bottom: 0.5vw;
-    border:#746800 0.5vw solid;
-    border-radius: 0.6vw;
+    
+    border: 0.5vw solid;
+    border-image: linear-gradient(155deg, #ceaf00, #6d5d00) 1;
 
-    background-color: #f8e800;
-    font-size: 3.5vw;
+    background: linear-gradient(135deg, #e9d900 10%, #dfbd00 50%, #e9bf01 90%);
+    font-size: 4.5vw;
     color: white;
     font-family: 'Naturaly';
-    text-shadow: 
-        -2px -2px 0 #000,  2px -2px 0 #000,  0px  2px 0 #000,  2px 0px 0 #000,
-        0px -2px 0 #000, -2px 0px 0 #000, -2px  2px 0 #000,  2px  2px 0 #000,
-        -3px -3px 0 #000,  3px -3px 0 #000,  0px  3px 0 #000,  3px 0px 0 #000,
-        0px -3px 0 #000, -3px 0px 0 #000, -3px  3px 0 #000,  3px  3px 0 #000,
-        -4px -4px 0 #000,  4px -4px 0 #000,  0px  4px 0 #000,  4px 0px 0 #000,
-        0px -4px 0 #000, -4px 0px 0 #000, -4px  4px 0 #000,  4px  4px 0 #000;
 
     z-index: 1;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+}
+
+.svg-text {
+    fill: white;
+    font-weight: bolder;
+    stroke: black;
+    stroke-width: 1.5px;
+    stroke-linejoin : round;
+}
+
+tspan.slash {
+    font-size: 5.0vw;
+    stroke-width: 3.5px;
 }
 
 .visuals-container {
