--- a/css/board.css
+++ b/css/board.css
@@ -137,6 +137,7 @@ svg{
 
     background: radial-gradient(circle at 70% 50%, #4ca2db 10%, #054761 50%, #002f4d 100%);
     cursor: default;
+    z-index: 4;
 }
 
 .player-info {
@@ -198,6 +199,7 @@ svg{
     border: 0.3vw solid black;
     border-radius: 1.2vw;
     padding: 0.55vh 0 0.55vh 0;
+    z-index: 3;
 }
 
 .sidebar-left {
@@ -212,18 +214,20 @@ svg{
     border: solid #140c33;
     border-width: 0.4vw;
     border-radius: 1vw 0 0 1vw;
+    z-index: 3;
 }
 
 .board {
     border: solid #140c33;
+    position: relative;
     border-width: 0.4vw 0 0.4vw 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 90%;
     height: 100%;
-    
-    background: radial-gradient(circle, #4474db, #1b113d);
+
+    /* background: radial-gradient(circle, #4474db, #1b113d); */
 }
 
 .sidebar-right {
@@ -238,6 +242,7 @@ svg{
     border: solid #140c33;
     border-width: 0.4vw;
     border-radius: 0 1vw 1vw 0;
+    z-index: 3;
 }
 
 .categories {
@@ -249,6 +254,7 @@ svg{
     
     border-bottom: 0.1vh solid;
     border-color: #000000;
+    z-index: 3;
 }
 
 .category {
@@ -281,13 +287,24 @@ svg{
          0.1vw  0.1vw 0 #000000;
 
     cursor: default;
+    z-index: 3;
 }
 
 .category:not(:last-child) {
     margin-right: -0.15vw; /* Apply negative margin only to non-last categories */
 }
 
-.questions {
+.questions-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    background: radial-gradient(circle, #4474db, #1b113d);
+}
+
+.questions-row {
     display: flex;
     justify-content: space-around;
     width: 100%;
@@ -323,6 +340,7 @@ svg{
 
     background: linear-gradient(130deg, #3c22b1, #352274);
     cursor: default;
+    z-index: 5;
 }
 
 .question:not(:last-child) {
@@ -353,13 +371,45 @@ svg{
 }
 
 .lamp {
-    /* position: absolute; */
     width: 6vh;
     height: 6vh;
     margin-top: 0.5vh;
-    /* margin-bottom: 1vw; */
 }
 
 .lamp.on {
     margin-top: -8.3vh;
+}
+
+.money-bag-container {
+    position: absolute;
+    width: 4vw;
+    aspect-ratio: 365/464;
+    animation: fall 6s linear 1;
+}
+
+.money-bag {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
+.money-bag.normal {
+    background-image: url('../images/money_bag.png');
+    z-index: -1;
+}
+
+.money-bag.xray {
+    background-image: url('../images/money_bag_xray.png');
+    clip-path: inset(100% 0 0 0); 
+    z-index: 3;
+}
+
+@keyframes fall {
+    0% {
+        top: -200px;
+    }
+    100% {
+        top: 100vh;
+    }
 }
