--- a/css/board.css
+++ b/css/board.css
@@ -227,6 +227,8 @@ svg{
     width: 90%;
     height: 100%;
 
+    overflow: hidden;
+
     /* background: radial-gradient(circle, #4474db, #1b113d); */
 }
 
@@ -287,7 +289,7 @@ svg{
          0.1vw  0.1vw 0 #000000;
 
     cursor: default;
-    z-index: 3;
+    z-index: 5;
 }
 
 .category:not(:last-child) {
@@ -380,18 +382,12 @@ svg{
     margin-top: -8.3vh;
 }
 
-.money-bag-container {
+.money-bag {
     position: absolute;
     width: 4vw;
     aspect-ratio: 365/464;
-    animation: fall 6s linear 1;
-}
-
-.money-bag {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background-size: cover;
+    animation: fall 6s linear 1;
 }
 
 .money-bag.normal {
@@ -401,8 +397,6 @@ svg{
 
 .money-bag.xray {
     background-image: url('../images/money_bag_xray.png');
-    clip-path: inset(100% 0 0 0); 
-    z-index: 3;
 }
 
 @keyframes fall {
@@ -410,6 +404,6 @@ svg{
         top: -200px;
     }
     100% {
-        top: 100vh;
+        top: 110vh;
     }
 }
