language selection and controls without host for debugging

--- a/css/playerIndex.css
+++ b/css/playerIndex.css
@@ -75,3 +75,10 @@ body {
     color: white;
     cursor: pointer;
 }
+
+.flag {
+    width: 15vw;
+    margin-left: -48vw;
+    border: 1vw solid black;
+    z-index: 1;
+}
