--- a/css/board.css
+++ b/css/board.css
@@ -12,6 +12,7 @@ body {
     background: linear-gradient(180deg, #1d83bd, #0b2f70);
     height: 100vh;
     overflow: hidden;
+    user-select: none;
 }
 
 .loading-screen {
