--- a/css/playerBuzzer.css
+++ b/css/playerBuzzer.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    user-select: none;
 }
 
 .buzzer-button {
