--- a/css/boardEditor.css
+++ b/css/boardEditor.css
@@ -8,6 +8,22 @@
     src: url("../fonts/Naturaly.otf") format("opentype");
 }
 
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #261952;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    font-size: 15vw;
+    font-family: 'Mono Polz';
+}
+
 body {
     height: 100vh;
     background: linear-gradient(180deg, #1d83bd, #0b2f70);
@@ -128,6 +144,84 @@ button {
     align-items: center;
 }
 
+.save-board-window {
+    position: fixed;
+    display: none;
+    flex-direction: column;
+    gap: 2vh;
+    align-items: center;
+    justify-content: start;
+    width: 50%;
+    height: 50%;
+    margin-top: 25vh;
+    margin-left: 25%;
+    background: linear-gradient(180deg, #00a3cc 20%, #007a41 80%);
+    border: 0.5vw solid black;
+    border-radius: 1.2vw;
+    overflow: hidden;
+    user-select: none;
+    z-index: 102;
+}
+
+.description-label {
+    font-size: 2.5vw;
+    font-family: 'Mono Polz';
+    color: #000000;
+    margin-top: 2vh;
+}
+
+.board-description {
+    width: 50%;
+    height: 40%;
+    margin-top: 0vh;
+    font-size: 1.6vw;
+    font-family: 'Mono Polz';
+    text-align: center;
+    color: #000000;
+    border-style: solid;
+    border-width: 0.2vw;
+    border-color: #000000;
+    resize: none;
+    overflow: auto;
+}
+
+.board-description::placeholder {
+    color: #000000;
+}
+
+.board-description:focus {
+    outline: none;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 2vw;
+    margin-top: 2vh;
+}
+
+.save-board-button {
+    width: 11vw;
+    height: 7vh;
+    font-size: 2vw;
+    text-align: center;
+    border-style: solid;
+    border-width: 0.2vw;
+    border-color: #000000;
+    background: linear-gradient(150deg, #00a524, #005207);
+}
+
+.cancel-board-button {
+    width: 11vw;
+    height: 7vh;
+    font-size: 2vw;
+    text-align: center;
+    border-style: solid;
+    border-width: 0.2vw;
+    border-color: #000000;
+    background: linear-gradient(150deg, #9e0000, #690000);
+}
+
 .board {
     position: fixed;
     display: flex;
@@ -141,10 +235,7 @@ button {
     gap: 0;
 
     border: 0.2vw solid black;
-    /* border-radius: 1.2vw; */
-    /* padding: 0.55vh 0 0.55vh 0; */
-
-    background-color: red;
+    background-color: #00235f;
 
     overflow: hidden;
 }
@@ -250,6 +341,7 @@ button {
 }
 
 .board-cover {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -261,7 +353,7 @@ button {
 
 .question-editor {
     position: fixed;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 2vh;
     align-items: center;
