custom confirm dialogs, renaming boards to pages where appropriate (WIP)

--- a/css/board.css
+++ b/css/board.css
@@ -354,7 +354,7 @@ svg{
     visibility: hidden;
 }
 
-.next-board-window {
+.next-page-window {
     position: fixed;
     top: 30%;
     left: 30%;
