--- a/css/boardEditor.css
+++ b/css/boardEditor.css
@@ -8,20 +8,59 @@
     src: url("../fonts/Naturaly.otf") format("opentype");
 }
 
-.loading-screen {
+.confirm-window {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #261952;
-    display: flex;
+    display: none;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    z-index: 1000;
-    font-size: 15vw;
+    justify-content: start;
+    width: 30%;
+    height: 25%;
+    margin-top: 35vh;
+    margin-left: 34%;
+    background: linear-gradient(180deg, #00a3cc 20%, #007a41 80%);
+    border: 0.5vw solid black;
+    border-radius: 1.2vw;
+    overflow: hidden;
+    user-select: none;
+    z-index: 104;
+}
+
+.confirm-text {
+    height: 60%;
+    text-align: center;
+    font-size: 2.5vw;
     font-family: 'Mono Polz';
+    color: #000000;
+    margin-top: 2vh;
+}
+
+.confirm-button-container {
+    display: flex;
+    justify-content: center;
+    gap: 2vw;
+}
+
+.confirm-yes-button {
+    width: 7vw;
+    height: 7vh;
+    font-size: 2.5vw;
+    text-align: center;
+    border-style: solid;
+    border-width: 0.3vw;
+    border-color: #000000;
+    background: linear-gradient(150deg, #00a524, #005207);
+}
+
+.confirm-no-button {
+    width: 7vw;
+    height: 7vh;
+    font-size: 2.5vw;
+    text-align: center;
+    border-style: solid;
+    border-width: 0.3vw;
+    border-color: #000000;
+    background: linear-gradient(150deg, #9e0000, #690000);
 }
 
 body {
@@ -193,7 +232,7 @@ button {
     outline: none;
 }
 
-.button-container {
+.save-button-container {
     display: flex;
     justify-content: center;
     gap: 2vw;
