renamed boards to pages where appropriate, fixed server score tracking bug

--- a/css/host.css
+++ b/css/host.css
@@ -134,7 +134,7 @@ select {
     cursor: pointer;
 }
 
-.next-board-button {
+.next-page-button {
     width: 55vw;
     height: 13vh;
     margin-top: 3vh;
