--- a/css/boardEditor.css
+++ b/css/boardEditor.css
@@ -477,7 +477,6 @@ button {
 }
 
 .daily-double-text {
-    width: 19vw;
     font-size: 3.5vw;
     font-family: 'Mono Polz';
     color: #000000;
@@ -495,7 +494,7 @@ button {
 }
 
 .question-editor button {
-    position: relative;
+    width: 10vw;
     height: 6vh;
     padding-left: 2%;
     padding-right: 2%;
@@ -510,12 +509,14 @@ button {
 }
 
 .save-question-button {
+    position: absolute;
+    right: 11.5vw;
     margin-top: 1.2vh;
-    margin-left: 14vw;
-    margin-right: 1vw;
 }
 
 .cancel-question-button{
+    position: absolute;
+    right: 1vw;
     margin-top: 1.2vh;
 }
 
