--- a/css/lobby.css
+++ b/css/lobby.css
@@ -274,10 +274,10 @@ button {
     padding-bottom: 0.5vw;
     
     border: 0.5vw solid;
-    border-color: #bea200 #6d5d00 #6d5d00 #bea200;
+    border-color: #917b00 #917b00 #917b00 #917b00;
     border-radius: 0.8vw;
 
-    background: linear-gradient(135deg, #dfca0f 10%, #c7a900 50%, #b99700 90%);
+    background-color: #e7bd00;
     font-size: 4.5vw;
     color: white;
     font-family: 'Naturaly';
