--- a/css/playerIndex.css
+++ b/css/playerIndex.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'Naturaly';
-    src: url('../fonts/Naturaly.otf') format('opentype');
+    font-family: 'Chewy';
+    src: url('../fonts/Chewy-Regular.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Mono Polz';
-    src: url("../fonts/Mono Polz.ttf") format('truetype');
+    font-family: 'Lilita';
+    src: url('../fonts/LilitaOne-Regular.ttf') format('truetype');
 }
 
 .loading-screen {
@@ -21,7 +21,7 @@
     align-items: center;
     z-index: 1000;
     font-size: 15vw;
-    font-family: 'Mono Polz';
+    font-family: 'Lilita';
 }
 
 body {
@@ -53,13 +53,13 @@ body {
     color: white;
     border-color: #152c94 #122268 #122268 #152c94;
     text-align: center;
-    font-family: 'Naturaly';
+    font-family: 'Chewy';
     background: linear-gradient(160deg, #2147c2, #031891);
 }
 
 .player-name::placeholder {
     color: rgb(184, 253, 255);
-    font-family: 'Naturaly';
+    font-family: 'Chewy';
 }
 
 .join-game-button {
@@ -68,7 +68,7 @@ body {
     margin-top: 13vw;
     font-size: 8.5vw;
     text-align: center;
-    font-family: 'Naturaly';
+    font-family: 'Lilita';
     background-color: #583ABD;
     border: 2vw solid;
     border-radius: 1.5vw;
