--- a/css/boardList.css
+++ b/css/boardList.css
@@ -18,6 +18,31 @@
     src: url('../fonts/Atma-SemiBold.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: 'Bangers';
+    src: url('../fonts/Bangers-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'CherryBomb';
+    src: url('../fonts/CherryBombOne-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Coiny';
+    src: url('../fonts/Coiny-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'DynaPuff';
+    src: url('../fonts/DynaPuff-VariableFont_wdth\,wght.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'LuckiestGuy';
+    src: url('../fonts/LuckiestGuy-Regular.ttf') format('truetype');
+}
+
 body {
     height: 100vh;
     background: linear-gradient(180deg, #1d83bd, #0b2f70);
@@ -69,7 +94,8 @@ button {
     border-radius: 0.6vw;
     cursor: pointer;
     font-size: 2vw;
-    font-family: 'Atma';
+    font-family: 'WinkySans';
+    font-weight: 700;
     text-align: center;
     color: white;
     text-shadow: 
@@ -192,10 +218,16 @@ button {
     padding: 1vw;
 }
 
+.last-edited {
+    font-size: 1.6vw;
+}
+
 .board-title {
-    font-size: 4vw;
+    font-family: 'Bangers';
+    font-size: 3.5vw;
     white-space: normal;
     overflow-wrap: break-word;
+    letter-spacing: 0.2vw;
 }
 
 .board-description {
