--- a/css/playerBuzzer.css
+++ b/css/playerBuzzer.css
@@ -8,6 +8,31 @@
     src: url('../fonts/LilitaOne-Regular.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: 'Bangers';
+    src: url('../fonts/Bangers-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'CherryBomb';
+    src: url('../fonts/CherryBombOne-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Coiny';
+    src: url('../fonts/Coiny-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'DynaPuff';
+    src: url('../fonts/DynaPuff-VariableFont_wdth\,wght.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'LuckiestGuy';
+    src: url('../fonts/LuckiestGuy-Regular.ttf') format('truetype');
+}
+
 body {
     background-color: #261952;
     width: 100%;
@@ -27,7 +52,8 @@ body {
     border-radius: 50%;
     background: linear-gradient(to bottom, #ff4d4d, #af1212);
     font-size: 15vw;
-    font-family: 'Lilita';
+    font-family: 'LuckiestGuy';
+    line-height: 6;
     color: white;
     cursor: pointer;
     position: relative;
